@@ -168,7 +168,7 @@ mapstruct* swap_map(mapstruct *map) {
 	return NULL;
     }
 
-    if (save_map (map, 0) == -1) {
+    if (save_map (map, SAVE_MODE_NORMAL) == -1) {
 	LOG(llevError, "Failed to swap map %s.\n", map->path);
 	/* need to reset the in_memory flag so that delete map will also
 	 * free the objects with it.
